# Proovy-ai-test

./: .gitignore  README.md  pyproject.toml
src/: run_agent.py  run_client.py  run_service.py
src/agents/: __init__.py  agents.py  state.py  tutor.py
src/agents/nodes/: __init__.py
src/agents/prompts/: __init__.py
src/agents/tools/: __init__.py
src/agents/workflows/: __init__.py
src/agents/workflows/nodes/: __init__.py
src/agents/workflows/subgraphs/: __init__.py
src/client/: client.py
src/core/: __init__.py  llm.py  settings.py
src/memory/: __init__.py  chroma.py  postgres.py
src/proovy_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/schema/: __init__.py  models.py  schema.py
src/service/: service.py  utils.py
